--- a/default.conf
+++ b/default.conf
@@ -14,7 +14,8 @@ server {
 
     location /app/ {
         rewrite ^/app/(.*) /$1 break;
-        proxy_pass http://$host:30000/$uri$is_args$args;
+#        proxy_pass http://$host:30000/$uri$is_args$args;
+        proxy_pass http://zoo-service-backend:99/$uri$is_args$args;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Real-IP $remote_addr;
     }
