--- a/default.conf
+++ b/default.conf
@@ -10,12 +10,14 @@ server {
         index  index.html index.htm;
     }
 
-
+    upstream backend {
+        server http://zoo-service-backend:99;
+    }
 
     location /app/ {
         rewrite ^/app/(.*) /$1 break;
 #        proxy_pass http://$host:30000/$uri$is_args$args;
-        proxy_pass http://zoo-service-backend:99/$uri$is_args$args;
+        proxy_pass http://backend/$uri$is_args$args;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Real-IP $remote_addr;
     }
