--- a/default.conf
+++ b/default.conf
@@ -1,3 +1,7 @@
+http {
+    upstream backend {
+        server http://zoo-service-backend:99;
+    }
 
 server {
     listen       80;
@@ -21,9 +25,6 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
     }
 
-    upstream backend {
-        server http://zoo-service-backend:99;
-    }
 
 
 
@@ -59,4 +60,5 @@ server {
     #location ~ /\.ht {
     #    deny  all;
     #}
+}
 }
