--- a/default.conf
+++ b/default.conf
@@ -1,8 +1,3 @@
-http {
-    upstream backend {
-        server http://zoo-service-backend:99;
-    }
-
 server {
     listen       80;
     server_name  localhost;
@@ -20,7 +15,7 @@ server {
     location /app/ {
         rewrite ^/app/(.*) /$1 break;
 #        proxy_pass http://$host:30000/$uri$is_args$args;
-        proxy_pass http://backend/$uri$is_args$args;
+        proxy_pass http://zoo-service-backend.zoo-app-gke:99/$uri$is_args$args;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Real-IP $remote_addr;
     }
@@ -60,5 +55,4 @@ server {
     #location ~ /\.ht {
     #    deny  all;
     #}
-}
 }
