--- a/default.conf
+++ b/default.conf
@@ -13,9 +13,10 @@ server {
 
 
     location /app/ {
+        resolver kube-dns.kube-system.svc.cluster.local;
         rewrite ^/app/(.*) /$1 break;
 #        proxy_pass http://$host:30000/$uri$is_args$args;
-        proxy_pass http://zoo-service-backend.zoo-app-gke:99/$uri$is_args$args;
+        proxy_pass http://zoo-service-backend:99/$uri$is_args$args;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Real-IP $remote_addr;
     }
