--- a/nginx.conf
+++ b/nginx.conf
@@ -23,7 +23,7 @@ http {
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
  upstream backend {
-    server http://zoo-service-backend:99
+    server http://zoo-service-backend:99;
   }
 
     access_log  /var/log/nginx/access.log  main;
