--- a/nginx.conf
+++ b/nginx.conf
@@ -23,8 +23,8 @@ http {
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
  upstream backend {
-    server http:///zoo-service-backend.zoo-app-gke.svc.cluster.local:99;
-    server http:///zoo-service-backend.zoo-app.svc.cluster.local:99;
+    server http://zoo-service-backend.zoo-app-gke.svc.cluster.local:99;
+    server http://zoo-service-backend.zoo-app.svc.cluster.local:99;
   }
 
     access_log  /var/log/nginx/access.log  main;
