--- a/nginx.conf
+++ b/nginx.conf
@@ -22,10 +22,16 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
- upstream backend {
-    server http://zoo-service-backend.zoo-app-gke.svc.cluster.local:99;
-    server http://zoo-service-backend.zoo-app.svc.cluster.local:99;
-  }
+# upstream backend {
+#    server http://zoo-service-backend.zoo-app-gke.svc.cluster.local:99;
+#    server http://zoo-service-backend.zoo-app.svc.cluster.local:99;
+#  }
+
+
+upstream backend {
+        server backend1.example.com:443;
+        server backend2.example.com:443;
+   }
 
     access_log  /var/log/nginx/access.log  main;
 
