--- a/default.conf
+++ b/default.conf
@@ -13,6 +13,7 @@ server {
 
 
     location /app/ {
+        resolver 127.0.0.1:53 ipv6=off valid=10s;
         rewrite ^/app/(.*) /$1 break;
 #        proxy_pass http://$host:30000/$uri$is_args$args;
         proxy_pass http://backend/$uri$is_args$args;
