--- a/default.conf
+++ b/default.conf
@@ -13,7 +13,7 @@ server {
 
 
     location /app/ {
-        resolver svc.cluster.local valid=10s;
+        resolver kube-dns.kube-system.cluster.local valid=10s;
         rewrite ^/app/(.*) /$1 break;
 #        proxy_pass http://$host:30000/$uri$is_args$args;
         proxy_pass http://backend/$uri$is_args$args;
