--- a/default.conf
+++ b/default.conf
@@ -10,13 +10,11 @@ server {
         index  index.html index.htm;
     }
 
-
-
-    location /app/ {
+    location /zoo/app/ {
         resolver kube-dns.kube-system.cluster.local valid=10s;
-        rewrite ^/app/(.*) /$1 break;
-#        proxy_pass http://$host:30000/$uri$is_args$args;
-        proxy_pass http://backend/$uri$is_args$args;
+        rewrite ^/zoo/app/(.*) /$1 break;
+#        proxy_pass http://$host/$uri$is_args$args;
+#        proxy_pass http://backend/$uri$is_args$args;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Real-IP $remote_addr;
     }
