--- a/default.conf
+++ b/default.conf
@@ -10,10 +10,11 @@ server {
         index  index.html index.htm;
     }
 
-    location /zoo/app/ {
-        rewrite ^/zoo/app/(.*) /$1 break;
-        proxy_pass http://$host/$uri$is_args$args;
-#        proxy_pass http://backend/$uri$is_args$args;
+    location /app/ {
+#        rewrite ^/zoo/app/(.*) /$1 break;
+#        proxy_pass http://$host/$uri$is_args$args;
+        rewrite ^/app(/.*)$ $1 break;
+        proxy_pass http://app;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Real-IP $remote_addr;
     }
