--- a/nginx.conf
+++ b/nginx.conf
@@ -10,7 +10,11 @@ events {
     worker_connections  1024;
 }
 
-
+    upstream app {
+        zoo-service-backend.zoo-app.svc.cluster.local:99;
+        zoo-service-backend.zoo-app-gke.svc.cluster.local:99;
+        zoo-service-backend.zoo-app-aws.svc.cluster.local:99;
+    }
 
 
 
