--- a/default.conf
+++ b/default.conf
@@ -1,7 +1,7 @@
 server {
     listen       80;
     server_name  localhost;
-
+     resolver kube-dns.kube-system.svc.cluster.local valid=5s;
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
 
