--- a/nginx.conf
+++ b/nginx.conf
@@ -24,12 +24,12 @@ http {
 
     access_log  /var/log/nginx/access.log  main;
 
-    upstream app {
-        resolver kube-dns.kube-system.svc.cluster.local valid=5s;
-        zoo-service-backend.zoo-app.svc.cluster.local:99;
-        zoo-service-backend.zoo-app-gke.svc.cluster.local:99;
-        zoo-service-backend.zoo-app-aws.svc.cluster.local:99;
-    }
+#    upstream app {
+ #       resolver kube-dns.kube-system.svc.cluster.local valid=5s;
+  #      zoo-service-backend.zoo-app.svc.cluster.local:99;
+   #     zoo-service-backend.zoo-app-gke.svc.cluster.local:99;
+    #    zoo-service-backend.zoo-app-aws.svc.cluster.local:99;
+     #}
 
 
 
