--- a/default.conf
+++ b/default.conf
@@ -1,7 +1,7 @@
 server {
     listen       80;
     server_name  localhost;
-     resolver kube-dns.kube-system.svc.cluster.local valid=5s;
+#     resolver kube-dns.kube-system.svc.cluster.local valid=5s;
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
 
@@ -14,7 +14,8 @@ server {
 #        rewrite ^/zoo/app/(.*) /$1 break;
 #        proxy_pass http://$host/$uri$is_args$args;
         rewrite ^/app(/.*)$ $1 break;
-        proxy_pass http://app;
+		proxy_pass zoo-service-backend.zoo-app-gke.svc.cluster.local:99/$1
+#        proxy_pass http://app;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Real-IP $remote_addr;
     }
