--- a/default.conf
+++ b/default.conf
@@ -14,7 +14,7 @@ server {
 #        rewrite ^/zoo/app/(.*) /$1 break;
 #        proxy_pass http://$host/$uri$is_args$args;
         rewrite ^/app(/.*)$ $1 break;
-		proxy_pass http//zoo-service-backend.zoo-app-gke.svc.cluster.local:99/$uri$is_args$args;
+		proxy_pass http//zoo-service-backend.zoo-app-gke.svc.cluster.local:99$uri$is_args$args;
 #        proxy_pass http://app;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Real-IP $remote_addr;
