--- a/default.conf
+++ b/default.conf
@@ -11,6 +11,7 @@ server {
     }
 
     location /app/ {
+		resolver kube-dns.kube-system.svc.cluster.local valid=5s;
 #        rewrite ^/zoo/app/(.*) /$1 break;
 #        proxy_pass http://$host/$uri$is_args$args;
         rewrite ^/app(/.*)$ $1 break;
