--- a/default.conf
+++ b/default.conf
@@ -22,7 +22,7 @@ server {
 
     location /app/ {
         rewrite ^/app/(.*) /$1 break;
-        proxy_pass http://localhost:8080/$uri$is_args$args;
+        proxy_pass http://127.0.0.1:8080/$uri$is_args$args;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Real-IP $remote_addr;
     }
