--- a/default.conf
+++ b/default.conf
@@ -10,10 +10,10 @@ server {
         index  index.html index.htm;
     }
 
-    location /zoo/ {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-    }
+#    location /zoo/ {
+#        root   /usr/share/nginx/html;
+#        index  index.html index.htm;
+#    }
     location /zoo/app/ {
 		resolver kube-dns.kube-system.svc.cluster.local valid=5s;
 #        rewrite ^/zoo/app/(.*) /$1 break;
